--- a/package.json
+++ b/package.json
@@ -24,15 +24,41 @@
     "@ionic-native/splash-screen": "~4.11.0",
     "@ionic-native/status-bar": "~4.11.0",
     "@ionic/storage": "2.1.3",
+    "cordova-android": "7.0.0",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.1.2",
+    "cordova-plugin-ionic-webview": "^2.0.3",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "freeice": "^2.2.2",
+    "hark": "^1.2.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "openvidu-browser": "^2.4.0",
+    "platform": "^1.3.5",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
+    "uuid": "^3.3.2",
+    "webrtc-adapter": "^6.3.2",
+    "wolfy87-eventemitter": "^5.2.5",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.11",
+    "@ionic/lab": "1.0.7",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "android"
+    ]
+  }
 }
