--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/camera": "^4.14.0",
     "@ionic-native/core": "~4.11.0",
     "@ionic-native/splash-screen": "~4.11.0",
     "@ionic-native/status-bar": "~4.11.0",
     "@ionic/storage": "2.1.3",
+    "cordova-plugin-camera": "^4.0.3",
     "freeice": "^2.2.2",
     "hark": "^1.2.2",
     "ionic-angular": "3.9.2",
@@ -67,5 +69,10 @@
     "typescript": "~2.6.2",
     "webpack": "^4.17.1"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-camera": {}
+    }
+  }
 }
